--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
     <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KHAF FULFILLMENT</title>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Edison 3PL",
+      "description": "Edison 3PL offers end-to-end logistics, warehousing, and supply chain solutions across India.",
+      "image": "https://edison3pl.vercel.app/og-image.jpg",
+      "url": "https://edison3pl.vercel.app/",
+      "telephone": "+91 XXXXXXXXXXX",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Your Warehouse Street Address",
+        "addressLocality": "City Name",
+        "addressRegion": "State Name",
+        "postalCode": "PIN Code",
+        "addressCountry": "IN"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "09:00",
+          "closes": "18:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Saturday"
+          ],
+          "opens": "10:00",
+          "closes": "14:00"
+        }
+      ],
+      "priceRange": "$$$",
+      "sameAs": [
+        "https://www.facebook.com/YourPage",
+        "https://www.linkedin.com/company/YourCompany"
+      ]
+    }
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
