--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "Edison 3PL",
-      "description": "Edison 3PL offers end-to-end logistics, warehousing, and supply chain solutions across India.",
-      "image": "https://edison3pl.vercel.app/og-image.jpg",
-      "url": "https://edison3pl.vercel.app/",
-      "telephone": "+91 XXXXXXXXXXX",
+      "name": "KHAF FULFILLMENT",
+      "description": "KHAF FULFILLMENT offers Amazon FBA and FBM prep services, including receiving, inspection, FNSKU labeling, and forwarding for small to large scale businesses. Located in Edison, NJ.",
+      "image": "https://your-website.com/og-image.jpg",
+      "url": "https://your-website.com/",
+      "telephone": "+1 (347) 217-5150",
+      "email": "khaf.fulfillment@gmail.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Your Warehouse Street Address",
-        "addressLocality": "City Name",
-        "addressRegion": "State Name",
-        "postalCode": "PIN Code",
-        "addressCountry": "IN"
+        "streetAddress": "Your Street Address",
+        "addressLocality": "Edison",
+        "addressRegion": "NJ",
+        "postalCode": "08817",
+        "addressCountry": "US"
       },
       "openingHoursSpecification": [
         {
@@ -44,10 +45,11 @@
           "closes": "14:00"
         }
       ],
-      "priceRange": "$$$",
+      "priceRange": "$",
       "sameAs": [
-        "https://www.facebook.com/YourPage",
-        "https://www.linkedin.com/company/YourCompany"
+        "https://www.facebook.com/share/1AFbpVTSam/",
+        "https://twitter.com",
+        "https://instagram.com"
       ]
     }
     </script>
