--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/png" href="/src/assets/new-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KHAF FULFILLMENT</title>
+
+    <meta name="description" content="KHAF FULFILLMENT offers Amazon FBA and FBM prep services, including receiving, inspection, FNSKU labeling, and forwarding for small to large scale businesses. Located in Edison, NJ." />
+    <meta name="keywords" content="Amazon FBA, Amazon FBM, prep service, FNSKU labeling, fulfillment center, e-commerce fulfillment, Edison NJ, KHAF FULFILLMENT" />
+    <meta name="author" content="KHAF FULFILLMENT" />
+
+    <meta property="og:title" content="KHAF FULFILLMENT" />
+    <meta property="og:description" content="Amazon FBA and FBM prep services for small to large scale businesses in Edison, NJ." />
+    <meta property="og:image" content="https://your-website.com/og-image.jpg" />
+    <meta property="og:url" content="https://your-website.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="KHAF FULFILLMENT" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="KHAF FULFILLMENT" />
+    <meta name="twitter:description" content="Amazon FBA and FBM prep services for small to large scale businesses in Edison, NJ." />
+    <meta name="twitter:image" content="https://your-website.com/og-image.jpg" />
+    <meta name="twitter:url" content="https://your-website.com/" />
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
