Brand logo update

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KHAF FULFILLMENT</title>
 
-    <meta name="description" content="KHAF FULFILLMENT offers Amazon FBA and FBM prep services, including receiving, inspection, FNSKU labeling, and forwarding for small to large scale businesses. Located in Edison, NJ." />
-    <meta name="keywords" content="Amazon FBA, Amazon FBM, prep service, FNSKU labeling, fulfillment center, e-commerce fulfillment, Edison NJ, KHAF FULFILLMENT" />
+    <meta name="description" content="Expert Amazon FBA & FBM prep services in Edison, NJ. We handle receiving, inspection, FNSKU labeling, and forwarding for businesses of all sizes." />
+    <meta name="keywords" content="Amazon FBA prep, Amazon FBM prep, 3PL partner, third-party logistics, fulfillment center, eCommerce fulfillment, supply chain management, warehousing, inventory management, order fulfillment, pick and pack, FNSKU labeling, receiving and inspection, retail logistics, distribution, freight services, last-mile delivery, scalable logistics, Edison NJ, New Jersey, KHAF FULFILLMENT" />
     <meta name="author" content="KHAF FULFILLMENT" />
 
     <meta property="og:title" content="KHAF FULFILLMENT" />
